@@ -430,7 +430,6 @@ libgnome_post_args_parse (GnomeProgram *program,
 	setlocale (LC_ALL, "");
 	/* XXX todo - handle multiple installation dirs */
 	bindtextdomain (PACKAGE, LIBGNOME_LOCALEDIR);
-	gnome_i18n_init ();
 }
 
 static struct poptOption gnomelib_options [] = {
