@@ -1,3 +1,7 @@
+2001-06-14  Martin Baulig  <baulig@suse.de>
+
+	* gnome-i18n.c, gnome-i18nP.h: Removed.
+
 2001-06-13  Martin Baulig  <baulig@suse.de>
 
 	* Makefile.am: Install libgnome.h in `$(includedir)/gnome/2' to make it
